--- a/scala_tool/README
+++ b/scala_tool/README
@@ -7,6 +7,10 @@ Status:
   $ sbt run
   >>> visualize-diff-max
     gives you fancy diff-graph (requires graphviz and pdf viewer in $PATH, works flawlessly on ubuntu 12.04, known to work on OSX)
+  
+  Files:
+    graph.json  the directed security policy
+    models/*.json  the security invariants
 
 Status for developers:
   The generated code is at src/main/scala/tum/in/net/psn/log_topo/NetworkModels/GENERATED
