--- a/Network_Security_Policy_Verification/document/root.tex
+++ b/Network_Security_Policy_Verification/document/root.tex
@@ -12,7 +12,8 @@
 %\usepackage{eurosym}
   %for \<euro>
 
-%\usepackage[only,bigsqcap]{stmaryrd}
+% needed for complete lattice
+\usepackage[only,bigsqcap]{stmaryrd}
   %for \<Sqinter>
 
 %\usepackage{eufrak}
