--- a/Network_Security_Policy_Verification/document/root.tex
+++ b/Network_Security_Policy_Verification/document/root.tex
@@ -49,8 +49,8 @@
 \input{session}
 
 % optional bibliography
-%\bibliographystyle{abbrv}
-%\bibliography{root}
+\bibliographystyle{abbrv}
+\bibliography{root}
 
 \end{document}
 
