--- a/Network_Security_Policy_Verification/document/root.tex
+++ b/Network_Security_Policy_Verification/document/root.tex
@@ -45,6 +45,8 @@
 % sane default for proof documents
 \parindent 0pt\parskip 0.5ex
 
+\newpage
+
 % generated text of all theories
 \input{session}
 
